# ipcha-mistabra

./: CHANGELOG.md  CLAUDE.md  README.md  main.tex  pyproject.toml  references.bib
backcheck/: audit_report.md  claims.json  compass-verification.md  critics.md  findings.json
docs/: roadmap-nyxcore-im-v3.md
docs/superpowers/plans/: 2026-03-13-paper-v2-critics-refactoring.md
paper/pilot-data/: 2026-03-12-persona-evaluation-v2-design copy.md  nyxcore-systems-ipcha-mistabra-analysis-00-prepare.md  nyxcore-systems-ipcha-mistabra-analysis-01-adversarial-analysis.md  nyxcore-systems-ipcha-mistabra-analysis-02-synthesis.md  nyxcore-systems-ipcha-mistabra-analysis-03-arbitration.md  nyxcore-systems-ipcha-mistabra-analysis-04-results.md  nyxcore-systems-ipcha-mistabra-analysis-summary.md
paper/v1.0.0/: ipcha_mistabra_v1.0.0.tex
